2009-04-29  Jan Arne Petersen  <jpetersen@openismus.com>

	Fixes: NB#113822 - Application shortcut label should have hardcoded
	colours

	* src/hd-task-shortcut.c (LABEL_FONT, hd_task_shortcut_class_init):
	Use new hardcoded colours and SmallSystemFont for the label.

2009-04-27  Jan Arne Petersen  <jpetersen@openismus.com>

	Fixes: NB#111639 - Default icon is not shown for application
	shortcuts.

	* src/hd-task-manager.c (hd_task_manager_load_desktop_file):
	* src/hd-task-shortcut.c (hd_task_shortcut_desktop_file_changed_cb):
	Fallback to default icon if no application icon is available.

2009-04-27  Kimmo Hämäläinen <kimmo.hamalainen@nokia.com>

	Released 0.3.23
	* configure.ac: 0.3.23

2009-04-23  Jan Arne Petersen  <jpetersen@openismus.com>

	Fixes: NB#105139 - Fix broken HildonBanner theming.

	* src/hd-system-notifications.c (create_note_infoprint): Fix Broken
	HildonBanner theming.

	* debian/changelog: Update.

2009-04-22  Jan Arne Petersen  <jpetersen@openismus.com>

	Fixes: NB#110238 - Let plugins know about notifications of category
	system.note.*

	* src/hd-incoming-events.c (hd_incoming_events_notified): Call plugins
	also for notification with system.note.* category.

	* debian/changelog: Update.

2009-04-17  Adam Endrodi <ext-adam.endrodi@nokia.com>

	NB#109378 Details (sender , time) in the notification window is not
	updated.

	group_update_window_content() calculates all the properties correctly
	but HdIncomingEventWindow forgot to tell the new values to hd.

	* src/hd-incoming-event-window.c (hd_incoming_event_window_set_property):
	  Propagate changes to the time and body to thw X window.

2009-04-20  Jan Arne Petersen  <jpetersen@openismus.com>

	Fixes: NB#110711, NB#109096 - Blank notifications displayed.

	* src/hd-notification-manager.c (hd_notification_manager_db_commit,
	  hd_notification_manager_db_insert_hint): Fix some warnings.

2009-04-17  Adam Endrodi <ext-adam.endrodi@nokia.com>
